manifests/frontend/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: matiasherrneder/mipla-frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
